Refactor morse and beacon as singleton

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3230,6 +3230,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\Sound\soundgenerator.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Sound\soundgenerator.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\Sound\voice.cxx"
 				>
 			</File>
