--- a/src/Sound/Makefile.am
+++ b/src/Sound/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libSound.a
 
 libSound_a_SOURCES = \
+	soundgenerator.cxx soundgenerator.hxx \
 	beacon.cxx beacon.hxx \
 	fg_fx.cxx fg_fx.hxx \
 	morse.cxx morse.hxx \
