Some more refactoring of the radios
- wrap the ident-generating code into a class
- move dme-in-range property into dme.cxx
- move dme-ident generation into dme.cxx
- support ident-button and volume for dme idents
- use globals.get_aircraft_position instead of properties
- some minor cleanup

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3198,6 +3198,14 @@
 			Name="Lib_Sound"
 			>
 			<File
+				RelativePath="..\..\..\src\Sound\audioident.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Sound\audioident.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\Sound\beacon.cxx"
 				>
 			</File>
