--- a/src/Sound/CMakeLists.txt
+++ b/src/Sound/CMakeLists.txt
@@ -1,6 +1,7 @@
 include(FlightGearComponent)
 
 set(SOURCES
+	audioident.cxx
 	soundgenerator.cxx
 	beacon.cxx
 	fg_fx.cxx
@@ -11,6 +12,7 @@ set(SOURCES
 	)
 
 set(HEADERS
+	audioident.hxx
 	soundgenerator.hxx
 	beacon.hxx
 	fg_fx.hxx
