MSVC2008 project files update.

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3762,6 +3762,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\Instrumentation\NavDisplay.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Instrumentation\NavDisplay.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\Instrumentation\rad_alt.cxx"
 				>
 			</File>
