fix cmake conditional for event-input

--- a/src/Input/CMakeLists.txt
+++ b/src/Input/CMakeLists.txt
@@ -3,7 +3,7 @@ include(FlightGearComponent)
 IF(APPLE)
 	set(EVENT_INPUT_SOURCES FGMacOSXEventInput.cxx)
 	set(EVENT_INPUT_HEADERS FGMacOSXEventInput.hxx)
-else(MSVC)
+elseif(MSVC)
     message(STATUS "EventInput not implemented for Windows yet")
 else()
 	set(EVENT_INPUT_SOURCES FGLinuxEventInput.cxx)
