automake: Add missing GL and z libs to fgpanel.

--- a/utils/fgpanel/Makefile.am
+++ b/utils/fgpanel/Makefile.am
@@ -16,7 +16,7 @@ fgpanel_SOURCES = main.cxx \
 #LIBS =
 
 fgpanel_LDADD = \
-	-lGLU -lglut -lsgmath -lsgprops -lsgio -lsgdebug -lsgmisc -lsgstructure -lsgxml -lsgtiming \
+	-lGLU -lGL -lglut -lsgmath -lsgprops -lsgio -lsgdebug -lsgmisc -lsgstructure -lsgxml -lsgtiming \
 	-lplibpu -lplibfnt -lplibul -lsgthreads \
-	-lrt -lpng
+	-lz -lrt -lpng
 endif
