Switch ATCmgr comm station search to filter by range in cartesian, not geodetic, space, to avoid numerical instability with extremely distant stations.

--- a/src/ATCDCL/CMakeLists.txt
+++ b/src/ATCDCL/CMakeLists.txt
@@ -9,5 +9,17 @@ set(SOURCES
 	ATCutils.cxx
 	ATCProjection.cxx
 	)
-	
-flightgear_component(ATCDCL "${SOURCES}")
+
+set(HEADERS
+	ATC.hxx
+	atis.hxx
+	ATCDialogOld.hxx
+	ATCVoice.hxx
+	ATCmgr.hxx
+	ATCutils.hxx
+	ATCProjection.hxx
+	atis_lexicon.hxx
+	atis_remap.hxx
+	)
+    	
+flightgear_component(ATCDCL "${SOURCES}" "${HEADERS}")
