--- a/src/Aircraft/CMakeLists.txt
+++ b/src/Aircraft/CMakeLists.txt
@@ -3,11 +3,13 @@ include(FlightGearComponent)
 set(SOURCES
 	controls.cxx
 	replay.cxx
+	flightrecorder.cxx
 	)
 
 set(HEADERS
 	controls.hxx
 	replay.hxx
+	flightrecorder.hxx
 	)
 
 
