Introducing: The new navradio code (WIP)
Here comes the work-in-progres code for a new navradio
implementation. Once completed, it will replace the
old/current navradio implementation.
The new code can be activated by setting
/instrumentation/use-new-navradio=true
at startup. This disables the old navradio implementation.

Current state:
- VOR works pretty good including the new
functionality 'code of confusion'.
- LOC and GS basically work
- backward compatibility (many properties) is to be implemented

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3762,6 +3762,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\Instrumentation\newnavradio.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Instrumentation\newnavradio.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\Instrumentation\od_gauge.cxx"
 				>
 			</File>
