--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -22,6 +22,7 @@ libInstrumentation_a_SOURCES = \
         marker_beacon.cxx marker_beacon.hxx \
 	mrg.cxx mrg.hxx\
         navradio.cxx navradio.hxx \
+        newnavradio.cxx newnavradio.hxx \
         slip_skid_ball.cxx slip_skid_ball.hxx \
 	transponder.cxx transponder.hxx \
         turn_indicator.cxx turn_indicator.hxx \
