--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -80,6 +80,7 @@ target_link_libraries(fgfs
 	${LIBSVN_LIBRARIES}
 	${HLA_LIBRARIES}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+	${PLATFORM_LIBS}
 )
 
 install(TARGETS fgfs RUNTIME DESTINATION bin)
