--- a/utils/GPSsmooth/CMakeLists.txt
+++ b/utils/GPSsmooth/CMakeLists.txt
@@ -1,7 +1,12 @@
 
-add_executable(GPSsmooth gps.cxx gps_main.cxx)
-add_executable(MIDGsmooth MIDG-II.cxx MIDG_main.cxx)
-add_executable(UGsmooth UGear.cxx UGear_command.cxx UGear_main.cxx UGear_telnet.cxx)
+add_executable(GPSsmooth gps.cxx gps.hxx gps_main.cxx)
+add_executable(MIDGsmooth MIDG-II.cxx MIDG-II.hxx MIDG_main.cxx)
+add_executable(UGsmooth 
+    UGear.cxx UGear.hxx
+    UGear_command.cxx UGear_command.hxx
+    UGear_main.cxx 
+    UGear_telnet.cxx
+    UGear_telnet.hxx)
 
 target_link_libraries(GPSsmooth
 	${SIMGEAR_CORE_LIBRARIES}
