--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3865,6 +3865,14 @@
 				RelativePath="..\..\..\src\Instrumentation\wxradar.hxx"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\Instrumentation\commradio.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Instrumentation\commradio.cxx"
+				>
+			</File>
 			<Filter
 				Name="Lib_HUD"
 				>
