--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -77,6 +77,7 @@ target_link_libraries(fgfs
 	${OPENAL_LIBRARY}
 	${OPENGL_LIBRARIES}
 	${PLIB_LIBRARIES}
+	${JPEG_LIBRARY}
 	${LIBSVN_LIBRARIES}
 	${HLA_LIBRARIES}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
