Cocoa menu-bar implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,8 @@ IF(APPLE)
     set(EVENT_INPUT_DEFAULT 1)
     
     find_library(CORESERVICES_LIBRARY CoreServices)
-    list(APPEND PLATFORM_LIBS ${CORESERVICES_LIBRARY})
+    find_library(COCOA_LIBRARY Cocoa)
+    list(APPEND PLATFORM_LIBS ${COCOA_LIBRARY} ${CORESERVICES_LIBRARY})
 
 elseif(CMAKE_SYSTEM_NAME MATCHES "Linux")
     # disabled while DBus / HAL / udev issues are decided
