Fixes for linking with shared SimGear.

--- a/utils/GPSsmooth/CMakeLists.txt
+++ b/utils/GPSsmooth/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(GPSsmooth
 	${PLIB_SG_LIBRARY}
 	${PLIB_UL_LIBRARY}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+	${ZLIB_LIBRARY}
 	${WINMM_LIBRARY}
 )
 
@@ -21,6 +22,7 @@ target_link_libraries(MIDGsmooth
 	${PLIB_SG_LIBRARY}
 	${PLIB_UL_LIBRARY}
 	${WINMM_LIBRARY}
+	${ZLIB_LIBRARY}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
 
@@ -29,6 +31,7 @@ target_link_libraries(UGsmooth
 	${PLIB_SG_LIBRARY}
 	${PLIB_UL_LIBRARY}
 	${WINMM_LIBRARY}
+	${ZLIB_LIBRARY}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
 
