--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -73,14 +73,12 @@ target_link_libraries(fgfs
 	${FG_LIBS}
 	${SIMGEAR_LIBRARIES}
 	${OPENSCENEGRAPH_LIBRARIES}
-	${ALUT_LIBRARY} 
-	${OPENAL_LIBRARY}
 	${OPENGL_LIBRARIES}
 	${PLIB_LIBRARIES}
 	${JPEG_LIBRARY}
-	${LIBSVN_LIBRARIES}
 	${HLA_LIBRARIES}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
+	${SIMGEAR_SCENE_LIBRARY_DEPENDENCIES}
 	${PLATFORM_LIBS}
 )
 
