Add function to calculate polarization loss
This function is reliable only for vertical polarization

--- a/src/Radio/CMakeLists.txt
+++ b/src/Radio/CMakeLists.txt
@@ -1,11 +1,13 @@
 include(FlightGearComponent)
 
 set(SOURCES
+	antenna.cxx
 	radio.cxx
 	itm.cpp
 	)
 
 set(HEADERS
+	antenna.hxx
 	radio.hxx
 	)
 
