--- a/src/Input/CMakeLists.txt
+++ b/src/Input/CMakeLists.txt
@@ -4,7 +4,7 @@ IF(APPLE)
 	set(EVENT_INPUT_SOURCES FGMacOSXEventInput.cxx)
 	set(EVENT_INPUT_HEADERS FGMacOSXEventInput.hxx)
 elseif(MSVC)
-    message(STATUS "EventInput not implemented for Windows yet")
+	message(STATUS "EventInput not implemented for Windows yet")
 else()
 	set(EVENT_INPUT_SOURCES FGLinuxEventInput.cxx)
 	set(EVENT_INPUT_HEADERS FGLinuxEventInput.hxx)
@@ -21,36 +21,37 @@ set(SOURCES
 	FGMouseInput.cxx
 	input.cxx	
 	)
-	
+
 set(HEADERS
 	FGButton.hxx
-    FGCommonInput.hxx
-    FGDeviceConfigurationMap.hxx
-    FGEventInput.hxx
-    FGJoystickInput.hxx
-    FGKeyboardInput.hxx
-    FGMouseInput.hxx
-    input.hxx
+	FGCommonInput.hxx
+	FGDeviceConfigurationMap.hxx
+	FGEventInput.hxx
+	FGJoystickInput.hxx
+	FGKeyboardInput.hxx
+	FGMouseInput.hxx
+	input.hxx
 	)
-    	
+
 if(EVENT_INPUT)
 	list(APPEND SOURCES ${EVENT_INPUT_SOURCES})
 	list(APPEND SOURCES ${EVENT_INPUT_HEADERS})
-	include_directories(${DBUS_INCLUDE_DIR} ${DBUS_ARCH_INCLUDE_DIR})
+	include_directories(${UDEV_INCLUDE_DIR})
+	add_definitions(-DWITH_EVENTINPUT)
 endif()
-	
+
 set(FGJS_SOURCES
 	fgjs.cxx
 	jsinput.cxx
 	jssuper.cxx
 	)
-	
+
 add_executable(fgjs ${FGJS_SOURCES})
 
 target_link_libraries(fgjs 
-    ${SIMGEAR_CORE_LIBRARIES}
-    ${PLIB_LIBRARIES}
-    ${SIMGEAR_CORE_LIBRARY_DEPENDENCIES})
+	${SIMGEAR_CORE_LIBRARIES}
+	${PLIB_LIBRARIES}
+	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES})
 
 add_executable(js_demo js_demo.cxx)
 
