Fix a typo in the radio propagation code
And for sentimental reason: keep the VC90 project file working

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -3199,6 +3199,30 @@
 			</File>
 		</Filter>
 		<Filter
+			Name="Lib_Radio"
+			>
+			<File
+				RelativePath="..\..\..\src\Radio\antenna.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Radio\antenna.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Radio\radio.cxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Radio\radio.hxx"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\Radio\itm.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
 			Name="Lib_Scenery"
 			>
 			<File
