#525 related: add compiler search path for every library Consider search path for every single library as reported/found by CMake. Most includes sit in the same directory (so the same directory is reported for almost all libraries), however this may not be the case for every system or library.

--- a/utils/fgpanel/CMakeLists.txt
+++ b/utils/fgpanel/CMakeLists.txt
@@ -34,6 +34,8 @@ if(GLUT_FOUND)
 		${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 	)
 
+	include_directories(${PNG_INCLUDE_DIR})
+
 	install(TARGETS fgpanel RUNTIME DESTINATION bin)
 else()
 	message(STATUS "glut NOT found, can't build fgpanel")
