--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -283,6 +283,7 @@ include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS}
 	${Boost_INCLUDE_DIRS}
 	${ZLIB_INCLUDE_DIR}
 	${ALUT_INCLUDE_DIR}
+	${OPENGL_INCLUDE_DIR}
 	${OPENAL_INCLUDE_DIR}
 	${SIMGEAR_INCLUDE_DIR}
 	${PLIB_INCLUDE_DIR} )
