--- a/man/fgfs.1.in
+++ b/man/fgfs.1.in
@@ -12,11 +12,10 @@
 .\"
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program; if not, write to the Free Software
-.\" Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+.\" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
-.Id $Id$
-.TH FGFS 1 "October 2003" "@VERSION@" "@PACKAGE@"
+.TH FGFS 1 "February 2012" "@VERSION@" "@PACKAGE@"
 .SH NAME
 fgfs \- FlightGear Flight Simulator
 .SH SYNOPSIS
@@ -27,6 +26,7 @@ fgfs \- FlightGear Flight Simulator
 is a free, open-source, multi-platform, and sophisticated flight
 simulator framework for the development and pursuit of interesting
 flight simulator ideas.
+For more information visit <http://www.flightgear.org>.
 .SH OPTIONS
 .TP
 .BI "--adf=" "[rotation:]frequency"
@@ -509,9 +509,10 @@ $FG_ROOT/mice.xml
 Mouse bindings.
 .RE
 .SH BUGS
-Send bug reports to <flightgear-devel@lists.sourceforge.net>.
+Send bug reports to <flightgear-devel@lists.sourceforge.net> or visit
+<http://code.google.com/p/flightgear-bugs>.
 .SH SEE ALSO
-fgjs(1)
+fgjs(1), fgpanel(1), js_demo(1), terrasync(1)
 .SH AUTHORS
 Curt L. Olson, et al.  See
 .I Thanks
