--- a/man/gl-info.1.in
+++ b/man/gl-info.1.in
@@ -12,10 +12,9 @@
 .\"
 .\" You should have received a copy of the GNU General Public License
 .\" along with this program; if not, write to the Free Software
-.\" Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+.\" Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
-.Id $Id$
 .TH GL-INFO 1 "January 2002" "@VERSION@" "@PACKAGE@"
 .SH NAME
 gl-info \- OpenGL test program for FlightGear
@@ -25,9 +24,10 @@ gl-info \- OpenGL test program for FlightGear
 .B gl-info
 is an OpenGL test program used to verify a valid OpenGL environment.
 .SH BUGS
-Send bug reports to <flightgear-devel@lists.sourceforge.net>.
+Send bug reports to <flightgear-devel@lists.sourceforge.net> or visit
+<http://code.google.com/p/flightgear-bugs>.
 .SH SEE ALSO
-fgfs(1)
+fgfs(1), fgjs(1), fgpanel(1), js_demo(1), terrasync(1)
 .SH AUTHORS
 Curt L. Olson, et al.  See
 .I Thanks
