--- a/utils/GPSsmooth/CMakeLists.txt
+++ b/utils/GPSsmooth/CMakeLists.txt
@@ -1,4 +1,6 @@
 
+check_library_exists(rt clock_gettime "" HAVE_CLOCK_GETTIME)
+
 add_executable(GPSsmooth gps.cxx gps.hxx gps_main.cxx)
 add_executable(MIDGsmooth MIDG-II.cxx MIDG-II.hxx MIDG_main.cxx)
 add_executable(UGsmooth 
@@ -7,6 +9,10 @@ add_executable(UGsmooth
     UGear_main.cxx 
     UGear_telnet.cxx
     UGear_telnet.hxx)
+
+if(HAVE_CLOCK_GETTIME)
+	target_link_libraries(GPSsmooth rt)
+endif(HAVE_CLOCK_GETTIME)
 
 target_link_libraries(GPSsmooth
 	${SIMGEAR_CORE_LIBRARIES}
@@ -17,6 +23,10 @@ target_link_libraries(GPSsmooth
 	${WINMM_LIBRARY}
 )
 
+if(HAVE_CLOCK_GETTIME)
+	target_link_libraries(MIDGsmooth rt)
+endif(HAVE_CLOCK_GETTIME)
+
 target_link_libraries(MIDGsmooth
 	${SIMGEAR_CORE_LIBRARIES}
 	${PLIB_SG_LIBRARY}
@@ -25,6 +35,10 @@ target_link_libraries(MIDGsmooth
 	${ZLIB_LIBRARY}
 	${SIMGEAR_CORE_LIBRARY_DEPENDENCIES}
 )
+
+if(HAVE_CLOCK_GETTIME)
+	target_link_libraries(UGsmooth rt)
+endif(HAVE_CLOCK_GETTIME)
 
 target_link_libraries(UGsmooth
 	${SIMGEAR_CORE_LIBRARIES}
