Fix copy&paste issue in previous commit... *yuk*

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,12 +199,12 @@ if(ENABLE_FGADMIN)
 	if ( FLTK_FOUND )
 		if ( X11_Xinerama_FOUND )
 			message(STATUS "Found X11_Xinerama...")
-			list(APPEND FLTK_LIBRARIES ${COCOA_LIBRARY} ${X11_Xinerama_LIB})
+			list(APPEND FLTK_LIBRARIES ${X11_Xinerama_LIB})
 		endif()
 
 		if ( X11_Xft_FOUND )
 			message(STATUS "Found X11_Xft...")
-			list(APPEND FLTK_LIBRARIES ${COCOA_LIBRARY} ${X11_Xft_LIB})
+			list(APPEND FLTK_LIBRARIES ${X11_Xft_LIB})
 		endif()
 
 		set( CMAKE_REQUIRED_INCLUDES ${FLTK_INCLUDE_DIR} )
