Revert "Try to fix MSVC template instantiation issue with SGVec dependencies."
This reverts commit 67b3b95310c2e9af2ebc9d0e0936ae01aff5092e.

--- a/utils/TerraSync/CMakeLists.txt
+++ b/utils/TerraSync/CMakeLists.txt
@@ -9,7 +9,7 @@ target_link_libraries(terrasync
 
 if(LIBSVN_FOUND)
 	target_link_libraries(terrasync ${LIBSVN_LIBRARIES})
-	set_property(TARGET terrasync APPEND PROPERTY COMPILE_FLAGS "${APR_CFLAGS} -DNO_OPENSCENEGRAPH_INTERFACE")
+	set_property(TARGET terrasync APPEND PROPERTY COMPILE_FLAGS "${APR_CFLAGS}")
 endif()
 
 
